--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main_content">
             <p class="border1"></p>
             <div class="row">
-                <div class="col-xl-10 content1">
+                <div class="col-xl-10 col-sm-12 content1">
                     <!-- <p class="border1"></p> -->
                     <p class="border2"></p>
                     <p class="bi"><strong>bi</strong></p>
@@ -22,17 +22,17 @@
                     <p class="pg1">Id pro diam graece saperet, viris im-
                         perdiet splendide sit an. 
                         Sed causae ancillae placerat in, audiam audire.</p>
-                    <div class="row">
-                        <div class="col-xl-3">
+                    <div class="row image">
+                        <div class="col-xl-3 col-sm-12">
                            <img src="/img/logo1.png" alt="logo1" class="img-responsive logo1">
                         </div>
-                        <div class="col-xl-3">
+                        <div class="col-xl-3 col-sm-12">
                            <img src="/img/logo3.png" alt="logo2" class="img-responsive logo1">
                         </div>
-                        <div class="col-xl-3">
+                        <div class="col-xl-3 col-sm-12">
                             <img src="/img/logo4.png" alt="logo3" class="img-responsive logo1">
                         </div>
-                        <div class="col-xl-3">
+                        <div class="col-xl-3 col-sm-12">
                             <img src="/img/logo2.png" alt="logo4" class="img-responsive logo1">
                         </div>
                     </div>
@@ -42,14 +42,14 @@
                         <p class="creative"><strong>CREATIVE BRANDING AGENCY</strong></p>
                     </div>
                 </div>
-                <div class="col-xl-2 content2">
+                <div class="col-xl-2 col-sm-12 content2">
                     <p class="trend">TREND</p>
                 </div>
 
             </div>
 
             <div class="row">
-                <div class="col-xl-6 complex">
+                <div class="col-xl-6 col-sm-12 complex">
                     <div class="complex1">
                         <div class="subcontent2">
                            <p>GRAPHICS</p>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6 complex4">
+                <div class="col-xl-6 col-sm-12 complex4">
                     <p class="a">A</p>
                     <p class="ab">Id pro diam graece saperet, viris imperdiet splendide sit an. Sed causae ancillae placerat in, audiam audire maluisset ad mea. An ubique iracundia comliectitur vel, per ex ubique aliquam recusabo. Stet sanctus Blandit tenec.</p>
                     <div class="complex5">
@@ -87,44 +87,9 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </header>
     
-    <!-- <section>
-        <div class="row">
-            <div class="col-6">
-                <div class="subcontent2">
-                   <p>GRAPHICS</p>
-                   <p>BRANDING</p>
-                   <p>INFOGRAPHICS</p>
-                   <p>MOTION</p>
-                   <P>GRAPHICS</P>
-                </div>
-
-                <div>
-                    <i class="bi bi-geo-alt-fill"></i>
-                    <p>London, Pawel, 12B/A</p>
-                </div>
-                <div>
-                    <i class="bi bi-telephone-fill"></i>
-                    <p>(012) 345 678</p>
-                </div>
-                <div>
-                    <i class="bi bi-envelope-fill"></i>
-                    <p>contact@email.com</p>
-                </div>
-            </div>
-            <div class="col-6"></div>
-        </div>
-    </section> -->
-
-
-
-
-
-
-
 
     <script src="js/popper.min.js"></script>
     <script src="js/popper.min.js"></script>
