--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                         Sed causae ancillae placerat in, audiam audire.</p>
                     <div class="row image">
                         <div class="col-xl-3 col-sm-12">
-                           <img src="/img/logo1.png" alt="logo1" class="img-responsive logo1">
+                           <img src="./img/logo1.png" alt="logo1" class="img-responsive logo1">
                         </div>
                         <div class="col-xl-3 col-sm-12">
-                           <img src="/img/logo3.png" alt="logo2" class="img-responsive logo1">
+                           <img src="./img/logo3.png" alt="logo2" class="img-responsive logo1">
                         </div>
                         <div class="col-xl-3 col-sm-12">
-                            <img src="/img/logo4.png" alt="logo3" class="img-responsive logo1">
+                            <img src="./img/logo4.png" alt="logo3" class="img-responsive logo1">
                         </div>
                         <div class="col-xl-3 col-sm-12">
-                            <img src="/img/logo2.png" alt="logo4" class="img-responsive logo1">
+                            <img src="./img/logo2.png" alt="logo4" class="img-responsive logo1">
                         </div>
                     </div>
                     <div class="subcontent1">
